--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         <!--==================== PORTFOLIO 1 ====================-->
         
             <div class="portfolio__content grid swiper-slide">
-                <img src="./packages/images/portfolio1.PNG" alt="" class="portfolio__img">
+                <img src="./packages/images/portfolio1.png" alt="" class="portfolio__img">
 
                 <div class="portfolio_">
                     <h3 class="portfolio__title">Valentine Interactive Greeting</h3>
@@ -384,7 +384,7 @@
             <!--==================== PORTFOLIO 2 ====================-->
         
             <div class="portfolio__content grid swiper-slide">
-                <img src="./packages/images/portfolio2.PNG" alt="" class="portfolio__img">
+                <img src="./packages/images/portfolio2.png" alt="" class="portfolio__img">
 
                 <div class="portfolio_">
                     <h3 class="portfolio__title">Employee Time-In/Out System</h3>
