--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         </div>
 
                         <div class="home__data">
-                            <h1 class="home__title">Hi, John Abraham Carpio</h1>
+                            <h1 class="home__title">Hi, I'm John Abraham Carpio</h1>
                             <h3 class="home__subtitle">Aspiring Web Developer</h3>
                             <p class="home__description">I am passionate about building user-friendly websites and continuously learning modern web technologies.</p>
                             <a href="#contact" class="button button--flex home__button">
