--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 
                         <div>
                             <h3 class="contact__title">Call me</h3>
-                            <span class="contatc__subtitle">+63 945-885-6254</span>
+                            <span class="contatc__subtitle">For professional inquiries, please email first before calling.</span>
                         </div>
                     </div>
 
