--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         </p>
 
                         <div class="about__buttons">
-                            <a download="" href="https://drive.usercontent.google.com/download?id=1NVBaxPzVApKJRhQZI9DAZL2ahwlBpYbr&export=download&authuser=0&confirm=t&uuid=12f74235-aa25-4c6e-80ab-5d17c23cc58f&at=AN8xHorWwYoGH61l9LvbuycnHzTU:1752125958910" class="button button--flex">
+                            <a download="" href="https://drive.usercontent.google.com/download?id=1jio9rAVaTudtNSF9KmDoLySGbIX4jjrs&export=download" class="button button--flex">
                                 Download CV<i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
